# clscorgi

./: .gitignore  Dockerfile  README.md  pyproject.toml  veld.yaml
clscorgi/: bindings_abc.py  main.py  models.py  rdfgenerator_abc.py  rdfgenerators.py
clscorgi/dlk/: runner.py  triple_generators.py
clscorgi/dlk/data/: dlk_metadata_10.json  dlk_metadata_3.json  dlk_metadata_5.json  dlk_metadata_7.json  metadata_chunker.py
clscorgi/dlk/extractors/: bindings_extractor.py  link_extractor.py  tree_extractors.py
clscorgi/eltec/: runner.py  triple_generators.py
clscorgi/eltec_features/: runner.py  triple_generators.py
clscorgi/extractors/: __init__.py  bindings_extractor.py
clscorgi/gutenberg/: extractor.py  runner.py  triple_generators.py
clscorgi/output/: eltec_cze.ttl  eltec_deu.ttl  eltec_eng.ttl  test.ttl
clscorgi/output/dlk/: dlk.ttl
clscorgi/postdata/: runner.py  triple_extractor.py
clscorgi/rem/: runner.py  triple_generators.py
clscorgi/tool_inventory/: runner.py  triple_generators.py
clscorgi/utils/: namespace.py  utils.py
clscorgi/vocabs/: appellation.ttl  document_source.ttl  feature.ttl  format.ttl  identifier.ttl  licenses.ttl  link.ttl  method.ttl  operating_system.ttl  vocab_lookup.py  vocabs.py  vocabs_utils.py
eltec2rdf/: main.py  models.py  rdfgenerator_abc.py  rdfgenerators.py
eltec2rdf/extractors/: __init__.py  bindings_extractor.py  link_extractor.py  tree_extractors.py
eltec2rdf/output/: __old_eltec_deu.ttl  eltec_eng.ttl  eltec_fra.ttl  eltec_spa.ttl
eltec2rdf/utils/: utils.py
eltec2rdf/vocabs/: format.ttl  vocabs.py
(+846 files in other folders)
