[tool.poetry]
name = "CLSCorGI"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.1.1"
python-dotenv = "^1.0.0"
toolz = "^0.12.0"
lxml = "^4.9.3"
lodkit = "^0.2.5"
clisn = "^0.1.2"
rdflib = "^7.0.0"
loguru = "^0.7.2"
pydantic = "^2.6.0"
more-itertools = "^10.2.0"
langcodes = {extras = ["all"], version = "^3.3.0"}
language-data = "^1.1"
marisa-trie = "1.1.1"
pandas = "^2.2.3"
httpx = "^0.28.1"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
